QtQml: Clear context objects more thoroughly on destruction

The same object can be the context object of a hierarchy of contexts. So
far we would only clear one of them, leaving dangling pointers in the
others. Clear all the contexts.

Fixes: QTBUG-119326
Change-Id: I509f257672813866e3736b51f430f1243a8577f0
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 27ba69af2f64a8b194655c9fbb276ce981075f75)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 833f4f6913835a18c37b02bd4784d62cbb4d0701)
(cherry picked from commit 477c3c3c25d478caa5b833a9c64f3945b3d3a83e)
(cherry picked from commit 7318fadc42e462babeca473864d12cfd033ffa42)
(cherry picked from commit e1ded8e46f71c12855811d0ee1cb2c36dcf67517)