tests/auto/qml/qqmlcontext/data/A.qml
@@ -1,0 +1,6 @@
+import QtQml 2.15
+
+B {
+    id: b
+    property int y: 2
+}
