tests/auto/qml/qqmlcontext/data/B.qml
@@ -1,0 +1,6 @@
+import QtQml 2.15
+
+C {
+    id: z
+    property int z: 3
+}
