tests/auto/qml/qqmlcontext/data/C.qml
@@ -1,0 +1,6 @@
+import QtQml 2.15
+
+QtObject {
+    id: outer
+    objectName: "the" + "C"
+}
